# ytclip

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml
docs/: CNAME  index.html
tests/: test_clipper.py  test_config.py  test_database.py  test_models.py
tests/integration/: test_clip.py
ytclip/: __main__.py  clipper.py  config.py  database.py  jobs.py  models.py  updater.py
ytclip/cli/: main.py
ytclip/publishers/: __init__.py  base.py  instagram.py  linkedin.py  tiktok.py  youtube.py
ytclip/web/: app.py  auth.py
ytclip/web/routes/: brand_kits.py  clips.py  library.py  presets.py  publish.py  settings.py  share.py  video.py  watermarks.py
ytclip/web/static/: style.css
ytclip/web/templates/: base.html  index.html  landing.html  library.html  login.html  settings.html  share.html
ytclip/web/templates/partials/: job_row.html  player.html
