[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytclip"
version = "0.1.0"
description = "Self-hosted YouTube clip creator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Zeeshan Jan", email = "hello@zeeshan.uk"},
]
keywords = ["youtube", "clip", "downloader", "self-hosted", "ffmpeg", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "yt-dlp>=2024.1.0",
    "static-ffmpeg>=2.5",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio[trio]>=4.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://ytclip.xyz"
Repository = "https://github.com/ZeeshanJan/ytclip"
"Bug Tracker" = "https://github.com/ZeeshanJan/ytclip/issues"

[project.scripts]
ytclip = "ytclip.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ytclip*"]

[tool.setuptools.package-data]
"ytclip.web" = ["static/*", "templates/*.html", "templates/**/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require network access (deselect with '-m not integration')",
]
